[tool.poetry]
name = "tweepy-manager"
version = "0.2.1"
description = "Twitter accounts manager"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tweepy-self = "1.11.0"
better-proxy = "1.2.0"
questionary = "^2"
tqdm = "^4.66"
openpyxl = "^3.1"
sqlalchemy = "^2"
alembic = "^1.13"
psycopg = {extras = ["binary"], version = "^3.1.19"}


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
